[package]
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
categories = ["asynchronous", "database"]
description = "Integrate Diesel into async-std cleanly and efficiently."
edition = "2018"
license = "MIT/Apache-2.0"
name = "async-diesel"
repository = "https://github.com/mehcode/async-diesel"
version = "0.1.0"

[dependencies]
async-std = {version = "1.4.0", features = ["unstable"]}
async-trait = "0.1.21"
diesel = {version = "2.0.0", features = ["r2d2"]}
futures = "0.3.1"
r2d2 = "0.8.7"

[dev-dependencies]
async-std = {version = "1.4.0", features = ["attributes"]}
diesel = {version = "2.0.0", features = ["postgres", "uuid"]}
uuid = {version = "0.7.4", features = ["v4"]}
